--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,38 @@
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&family=Poller+One&display=swap");
+@font-face {
+  font-family: "TT Trailers";
+  src: url("/fonts/TT-Trailers.ttf") format("truetype");
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1 {
+    @apply font-trailers;
+    line-height: 0.75;
+    font-size: 24vw;
+  }
+  h2 {
+    @apply font-poller;
+    line-height: 1;
+    font-size: 7vw;
+  }
+  h3 {
+    @apply font-bold;
+  }
+  p {
+    line-height: 1.35;
+  }
+
+  @media (min-width: 800px) {
+    h1 {
+      @apply font-trailers;
+      font-size: 14vw;
+    }
+    h2 {
+      font-size: 2.5vw;
+    }
+  }
+}
